# FreeCAD

./: CMakeLists.txt
cMake/FreeCAD_Helpers/: PrintFinalReport.cmake  SetupKF5SyntaxHighlighting.cmake
src/App/: CMakeLists.txt  DebuggerBase.cpp  DebuggerBase.h  PythonDebugger.cpp  PythonDebugger.h
src/Base/: Interpreter.cpp  Interpreter.h
src/Gui/: Action.cpp  Application.cpp  ApplicationPy.cpp  CMakeLists.txt  CallTips.cpp  CommandMacro.cpp  DlgEditor.ui  DlgEditorImp.cpp  DlgEditorImp.h  DlgMacroExecuteImp.cpp  DlgUndoRedo.cpp  DockWindowManager.cpp  EditorView.cpp  EditorView.h  GuiApplication.cpp  Macro.cpp  Macro.h  MainWindow.cpp  PythonCode.cpp  PythonCode.h  PythonCodeDebugTools.cpp  PythonCodeDebugTools.h  PythonConsole.cpp  PythonConsole.h  PythonDebugger.cpp  PythonDebugger.h  PythonDebuggerView.cpp  PythonDebuggerView.h  PythonEditor.cpp  PythonEditor.h  PythonJedi.cpp  PythonSyntaxHighlighter.cpp  PythonSyntaxHighlighter.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TextEdit.cpp  TextEdit.h  ViewProviderTextDocument.cpp  Workbench.cpp  resource.cpp
src/Gui/Icons/: resource.qrc
src/Gui/TextEditor/: CMakeLists.txt  DlgEditor.ui  DlgEditorImp.cpp  EditorView.cpp  EditorView.h  LangPluginBase.cpp  LangPluginBase.h  LangSpecifics.cpp  LangSpecifics.h  PreCompiled.h  PythonCode.cpp  PythonCode.h  PythonCodeDebugTools.cpp  PythonCodeDebugTools.h  PythonEditor.cpp  PythonEditor.h  PythonJedi.h  PythonLangPlugin.cpp  PythonLangPlugin.h  PythonSyntaxHighlighter.cpp  PythonSyntaxHighlighter.h  PythonToken.cpp  PythonToken.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TextEditBlockData.cpp  TextEditBlockData.h  TextEditor.cpp  TextEditor.h
src/Gui/TextEditor/Language/: translation.qrc
src/Gui/TextEditor/PythonSource/: CMakeLists.txt  PythonLexer.cpp  PythonLexer.h  PythonSource.cpp  PythonSource.h  PythonSourceDebugTools.cpp  PythonSourceDebugTools.h  PythonSourceFrames.cpp  PythonSourceFrames.h  PythonSourceIdentifiers.cpp  PythonSourceIdentifiers.h  PythonSourceImports.cpp  PythonSourceImports.h  PythonSourceIndent.cpp  PythonSourceIndent.h  PythonSourceItemBase.cpp  PythonSourceItemBase.h  PythonSourceListBase.cpp  PythonSourceListBase.h  PythonSourceModule.cpp  PythonSourceModule.h  PythonSourceParameter.cpp  PythonSourceParameter.h  PythonSourceParser.cpp  PythonSourceParser.h  PythonSourcePrimitiveTypes.cpp  PythonSourcePrimitiveTypes.h  PythonSourceRoot.cpp  PythonSourceRoot.h  PythonSourceTuple.cpp  PythonSourceTuple.h  PythonSourceTypes.cpp  PythonSourceTypes.h  PythonToken.cpp  PythonToken.h
src/Gui/TextEditor/PythonSource/tests/: CMakeLists.txt  main.cpp  tst_FileInfo.cpp  tst_PythonLexer.cpp  tst_PythonToken.cpp
src/Gui/TextEditor/PythonSource/tests/compare/: test1.py.lexdmp
src/Gui/TextEditor/PythonSource/tests/testscripts/: Draft.py  test1.py  test2.py  testNumbers.py  testStrings.py
src/Gui/TextEditor/PythonSource/tests/testscripts/compare/: test1_v2.7.py.lexdmp  test1_v3.0.py.lexdmp  test1_v3.7.py.lexdmp  testNumbers_v2.7.py.lexdmp  testNumbers_v3.0.py.lexdmp  testNumbers_v3.6.py.lexdmp  testStrings_v2.7.py.lexdmp  testStrings_v3.2.py.lexdmp  testStrings_v3.5.py.lexdmp  testStrings_v3.6.py.lexdmp  testStrings_v3.7.py.lexdmp
src/Gui/TextEditor/PythonSource/tests/testscripts/examples/: testHelix.py
src/Main/: CMakeLists.txt
src/Main/IDE/: CMakeLists.txt  DlgPythonSettings.cpp  DlgPythonSettings.h  MainIde.cpp  MainWindow.cpp  MainWindow.h  dlgpythonsettings.cpp  dlgpythonsettings.h
src/Mod/Fem/Gui/: AbaqusHighlighter.h  AppFemGuiPy.cpp
src/Mod/Raytracing/Gui/: AppRaytracingGuiPy.cpp  PovrayHighlighter.h
src/Mod/Web/Gui/: BrowserView.cpp
